# SimpleNoteboook

./: README.md
client/: Cargo.toml
client/src/: error.rs  handler.rs  homepage.rs  loginpage.rs  main.rs  regpage.rs
server/: Cargo.toml  Muhdnajid.txt  najidnadri.txt  users.txt
server/src/: error.rs  handler.rs  main.rs  testing.rs
