[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
bcrypt = "0.10"
tokio = { version = "1", features = ["full"] }